# obzerveai

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  test_package.py
.github/workflows/: pypi-publish.yml
grafana-provisioning/dashboards/: main.yml  obzerve_ai_usage.json
grafana-provisioning/datasources/: datasource.yml
src/obzerveai/: __init__.py  monitor.py  push_data.py  sanitize.py
tests/: test_sanitize.py
